--- a/packages/web3-core-promievent/package.json
+++ b/packages/web3-core-promievent/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web3-core-promievent",
-    "version": "1.3.6",
+    "version": "1.3.7",
     "description": "This package extends the EventEmitter with the Promise class to allow chaining as well as multiple final states of a function.",
     "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-core-promievent",
     "license": "LGPL-3.0",
@@ -13,5 +13,6 @@
     },
     "dependencies": {
         "eventemitter3": "4.0.4"
-    }
+    },
+    "gitHead": "8c87580edf4856c2c655e3cca88c2a5f118206d4"
 }
