--- a/packages/web3-core-requestmanager/package.json
+++ b/packages/web3-core-requestmanager/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web3-core-requestmanager",
-    "version": "1.3.6",
+    "version": "1.3.7",
     "description": "Web3 module to handle requests to external providers.",
     "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-core-requestmanager",
     "license": "LGPL-3.0",
@@ -14,9 +14,10 @@
     "dependencies": {
         "underscore": "1.12.1",
         "util": "^0.12.0",
-        "web3-core-helpers": "1.3.6",
-        "web3-providers-http": "1.3.6",
-        "web3-providers-ipc": "1.3.6",
-        "web3-providers-ws": "1.3.6"
-    }
+        "web3-core-helpers": "1.3.7",
+        "web3-providers-http": "1.3.7",
+        "web3-providers-ipc": "1.3.7",
+        "web3-providers-ws": "1.3.7"
+    },
+    "gitHead": "8c87580edf4856c2c655e3cca88c2a5f118206d4"
 }
