--- a/packages/web3-core-subscriptions/package.json
+++ b/packages/web3-core-subscriptions/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web3-core-subscriptions",
-    "version": "1.3.6",
+    "version": "1.3.7",
     "description": "Manages web3 subscriptions. This is an internal package.",
     "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-core-subscriptions",
     "license": "LGPL-3.0",
@@ -16,10 +16,11 @@
     "dependencies": {
         "eventemitter3": "4.0.4",
         "underscore": "1.12.1",
-        "web3-core-helpers": "1.3.6"
+        "web3-core-helpers": "1.3.7"
     },
     "devDependencies": {
         "dtslint": "^3.4.1",
         "typescript": "^3.9.5"
-    }
+    },
+    "gitHead": "8c87580edf4856c2c655e3cca88c2a5f118206d4"
 }
