--- a/packages/web3-eth-iban/package.json
+++ b/packages/web3-eth-iban/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web3-eth-iban",
-    "version": "1.3.6",
+    "version": "1.3.7",
     "description": "This package converts Ethereum addresses to IBAN addresses a vice versa.",
     "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-eth-iban",
     "license": "LGPL-3.0",
@@ -15,10 +15,11 @@
     "main": "lib/index.js",
     "dependencies": {
         "bn.js": "^4.11.9",
-        "web3-utils": "1.3.6"
+        "web3-utils": "1.3.7"
     },
     "devDependencies": {
         "dtslint": "^3.4.1",
         "typescript": "^3.9.5"
-    }
+    },
+    "gitHead": "8c87580edf4856c2c655e3cca88c2a5f118206d4"
 }
