--- a/packages/web3-eth2-beaconchain/package.json
+++ b/packages/web3-eth2-beaconchain/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web3-eth2-beaconchain",
-    "version": "1.3.6",
+    "version": "1.3.7",
     "description": "Web3 ETH2 Beacon chain API wrappers.",
     "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-eth2-beaconchain",
     "license": "LGPL-3.0",
@@ -16,7 +16,7 @@
     },
     "main": "lib/index.js",
     "dependencies": {
-        "web3-eth2-core": "1.3.6"
+        "web3-eth2-core": "1.3.7"
     },
     "devDependencies": {
         "@babel/cli": "^7.12.10",
@@ -32,5 +32,6 @@
         "babel-jest": "^26.6.3",
         "jest": "^26.4.2",
         "typescript": "^4.0.3"
-    }
+    },
+    "gitHead": "8c87580edf4856c2c655e3cca88c2a5f118206d4"
 }
