--- a/packages/web3-eth2-core/package.json
+++ b/packages/web3-eth2-core/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web3-eth2-core",
-    "version": "1.3.6",
+    "version": "1.3.7",
     "description": "Web3 ETH2 core tools for sub-packages. This is an internal package.",
     "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-eth2-core",
     "license": "LGPL-3.0",
@@ -29,5 +29,6 @@
         "jest": "^26.5.3",
         "ts-jest": "^26.4.4",
         "typescript": "^3.9.7"
-    }
+    },
+    "gitHead": "8c87580edf4856c2c655e3cca88c2a5f118206d4"
 }
