--- a/packages/web3-utils/package.json
+++ b/packages/web3-utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "web3-utils",
-    "version": "1.3.6",
+    "version": "1.3.7",
     "description": "Collection of utility functions used in web3.js.",
     "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-utils",
     "license": "LGPL-3.0",
@@ -26,5 +26,6 @@
     "devDependencies": {
         "dtslint": "^3.4.1",
         "typescript": "^3.9.5"
-    }
+    },
+    "gitHead": "8c87580edf4856c2c655e3cca88c2a5f118206d4"
 }
